# lore-weave

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .npmrc  AGENT_PROTOCOL.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/rust/glossary_client/: Cargo.toml
crates/breaker-core/: Cargo.toml
crates/breaker-core/src/: lib.rs
crates/contracts-agent-control/: Cargo.toml
crates/contracts-agent-control/src/: lib.rs
crates/contracts-prompt/: Cargo.toml
crates/contracts-prompt/src/: canon_guardrail.rs  lib.rs
crates/contracts-ws/: Cargo.toml
crates/contracts-ws/src/: authz.rs  close_codes.rs  control_channel.rs  envelope.rs  lib.rs  server_lib.rs
crates/dp-kernel/: Cargo.toml
crates/dp-kernel-macros/: Cargo.toml
crates/dp-kernel-macros/src/: attrs.rs  lib.rs
crates/dp-kernel-macros/tests/: derive_aggregate.rs
crates/dp-kernel/examples/: g1_append_stmt.rs
crates/dp-kernel/src/: aggregate.rs  canon_cache.rs  canon_history.rs  capacity.rs  dependencies.rs  entity_status.rs  envelope.rs  errors.rs  event.rs  event_store.rs  event_store_pg.rs  event_validator.rs  lib.rs  lifecycle.rs  load_aggregate.rs  logging.rs  metadata.rs  observability.rs  outbox.rs  pii_sdk.rs  projection.rs  prompt.rs  resilience.rs  service_acl.rs  snapshot.rs  snapshot_cache.rs  supply_chain.rs  tracing.rs  turn.rs  turn_errors.rs  upcaster.rs  ws.rs
crates/dp-kernel/tests/: bulkhead_shuttle.rs  integration_event_store.rs
crates/foundation-model/: Cargo.toml
crates/foundation-model/src/: fanout.rs  lib.rs  lifecycle.rs  outbox.rs
crates/meta-rs/: Cargo.toml
crates/meta-rs/src/: allowlist.rs  audit.rs  cache.rs  errors.rs  lib.rs  metawrite.rs  routing.rs  sensitive_paths.rs  transitions.rs
crates/projection-golden/: Cargo.toml
crates/projection-golden/fixtures/: canon.entry.created.json  canon.entry.decanonized.json  canon.entry.promoted.json  canon.entry.updated.json  npc.created.json  npc.memory_embedded.json  npc.memory_embedded.skip.json  npc.relationship_changed.json  npc.said.json  pc.item_acquired.json  pc.moved.json  pc.relationship_changed.json  pc.spawned.json  region.ambient_changed.json  region.created.json  session.ended.json  session.participant_joined.json  session.participant_left.json  session.started.json  world.kv_set.json  world.kv_unset.json
crates/projection-golden/src/: lib.rs
crates/projection-golden/tests/: golden.rs
crates/projection-reference/: Cargo.toml
crates/projection-reference/src/: lib.rs
crates/projection-reference/tests/: diff.rs
crates/projections/canon/: Cargo.toml
crates/projections/npc/: Cargo.toml
crates/projections/pc/: Cargo.toml
crates/projections/session/: Cargo.toml
crates/projections/world_kv/: Cargo.toml
crates/rebuilder/: Cargo.toml
crates/rebuilder/src/: checkpoint.rs  dead_letter.rs  lib.rs
crates/service-http/: Cargo.toml
crates/service-http/src/: auth.rs  config.rs  db.rs  error.rs  health.rs  lib.rs  metrics.rs  trace.rs
crates/world-gen/: Cargo.toml
crates/world-gen/benches/: generate.rs
crates/world-gen/examples/: README.md  cold-rugged-archipelago.json  flatworld.rs
crates/world-gen/src/: author.rs  biome.rs  civ_adapter.rs  climate.rs  creative_seed.rs  culture.rs  erosion.rs  export.rs  feature.rs  flat_climate.rs  flatworld.rs  hierarchy.rs  hydrology.rs  lib.rs  main.rs  mesh.rs  naming.rs  noise.rs  params.rs  pathfind.rs  plates.rs  political.rs  projection.rs  relief.rs  render.rs  rng.rs  routes.rs  settlement.rs  terrain.rs  world_map.rs  zonegen.rs
crates/world-gen/tests/: age_bathymetry.rs  author_llm.rs  determinism.rs  parameterization.rs  serde.rs  structure.rs  tectonic_relief.rs
sdks/python/: README.md  pyproject.toml
sdks/python/loreweave_agent_control/: __init__.py  harness.py  rail.py  state_merge.py
sdks/python/loreweave_authn/: __init__.py  _verify.py  fastapi_deps.py  pyproject.toml
sdks/python/loreweave_canon_check/: __init__.py  base.py
sdks/python/loreweave_context/: __init__.py  budget.py  compaction.py  plan.py  system_message.py  tokens.py  trace.py
sdks/python/loreweave_crypto/: __init__.py  dek_client.py
sdks/python/loreweave_eval/: __init__.py  _client.py  calibration.py  compute_ensemble_macros.py  eval_harness.py  judge_ensemble.py  llm_judge.py  panel.py  scorer.py  sinks.py
sdks/python/loreweave_extraction/: __init__.py  _han_simplified_table.py  _types.py  _version.py  canonical.py  context_budget.py  entity_recovery.py  errors.py  filter_config_store.py  name_normalize.py  pass2.py  pass2_filter.py  planner.py  reasoning_wire.py  resolve_config.py  schema_projection.py
sdks/python/loreweave_grants/: __init__.py
sdks/python/loreweave_grounding/: __init__.py  cites.py  ports.py  regurgitation.py  sanitize.py  verify.py
sdks/python/loreweave_internal_client/: __init__.py  _context_length.py  _errors.py  _model_name.py  _transport.py  pyproject.toml
sdks/python/loreweave_jobs/: __init__.py  consumer.py  contract.py  emit.py  projection_consumer.py  scheduler.py
sdks/python/loreweave_llm/: __init__.py  attribution.py  client.py  errors.py  models.py  reasoning.py  structured.py
sdks/python/loreweave_mcp/: __init__.py  compact_content.py  confirm_token.py  context.py  errors.py  guards.py  meta.py  response.py  shape_snapshot.py  tasks.py  tasks_wire.py
sdks/python/loreweave_obs/: __init__.py  logging_setup.py
sdks/python/loreweave_parse/: __init__.py  _text_strip.py  _types.py  dispatcher.py  html_walker.py  pdf_walker.py  plaintext_parser.py  tiptap_walker.py
sdks/python/loreweave_safety/: __init__.py  floor.py
sdks/python/loreweave_vecmath/: __init__.py
sdks/python/tests/: test_attribution.py  test_audio.py  test_audio_gen.py  test_canon_check.py  test_client_jobs.py  (+25 more)
services/roleplay-service/: Cargo.toml  Dockerfile
services/tilemap-service/: Cargo.toml  DESIGN.md  Dockerfile  README.md
services/travel-service/: Cargo.toml  README.md
services/world-service/: Cargo.toml  README.md
tests/sim/: Cargo.toml  README.md
(+11284 files in other folders)
