# LoreWeave Rust workspace.
#
# This is the **first Rust workspace** in the monorepo (other services are Go /
# Python / TypeScript). Members:
#   - sdks/rust/loreweave_llm   — Rust SDK for the unified LLM gateway
#                                  (mirror of sdks/python/loreweave_llm).
#   - services/tilemap-service  — first Rust microservice; procedural tilemap
#                                  generation for non-cell LoreWeave channels.
#   - services/world-service    — LLM MMO RPG geography substrate (GEO_001 +
#                                  POL/SET/ROUTE). Cycle 0 scaffold (orphaned).
#   - services/travel-service   — LLM MMO RPG travel mechanics (TVL_001..005).
#                                  Cycle 0 scaffold (orphaned).
#   - crates/world-gen          — standalone procedural world-map generator
#                                  (GEO_GENERATOR_PLAN); library + CLI.
#
# Shared dependencies are pinned in [workspace.dependencies]; member crates
# inherit via `dep.workspace = true`.

[workspace]
resolver = "2"
members = [
    "sdks/rust/loreweave_llm",
    "services/tilemap-service",
    "services/world-service",
    "services/travel-service",
    "crates/world-gen",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["LoreWeave"]
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }

# HTTP client (rustls-tls avoids OpenSSL build pain on Windows)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# HTTP server (tilemap-service `serve` subcommand — POST /internal/v1/tilemaps/render)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# TMP-A4 deterministic seed
blake3 = "1.5"

# Deterministic procedural RNG — ChaCha8 streams sub-seeded from the blake3
# TilemapSeed (TMP_002 §8). rand provides the SeedableRng/Rng traits.
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUIDs (gateway StreamRequest.model_ref + user_id query param)
uuid = { version = "1.10", features = ["serde", "v4"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP mock server for offline SSE-parser / gateway integration tests (dev-only)
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
