# LoreWeave Rust workspace.
#
# This is the **first Rust workspace** in the monorepo (other services are Go /
# Python / TypeScript). Members:
#   - sdks/rust/loreweave_llm   — Rust SDK for the unified LLM gateway
#                                  (mirror of sdks/python/loreweave_llm).
#   - services/tilemap-service  — first Rust microservice; procedural tilemap
#                                  generation for non-cell LoreWeave channels.
#   - services/world-service    — LLM MMO RPG geography substrate (GEO_001 +
#                                  POL/SET/ROUTE). Cycle 0 scaffold (orphaned).
#   - services/travel-service   — LLM MMO RPG travel mechanics (TVL_001..005).
#                                  Cycle 0 scaffold (orphaned).
#   - crates/world-gen          — standalone procedural world-map generator
#                                  (GEO_GENERATOR_PLAN); library + CLI.
#
# Shared dependencies are pinned in [workspace.dependencies]; member crates
# inherit via `dep.workspace = true`.

[workspace]
resolver = "2"
members = [
    "sdks/rust/loreweave_llm",
    "services/tilemap-service",
    "services/world-service",
    "services/travel-service",
    # roleplay-service (2026-06-24) — first user-facing Rust service (scripts +
    # actor-memory + start-orchestration; the MMO roleplay-service seed). Built
    # on `crates/service-http` (the shared axum/auth/health/trace/db kit).
    "services/roleplay-service",
    "crates/service-http",
    "crates/world-gen",
    "crates/meta-rs",
    # S6 / H1-loom — tokio-free CircuitBreaker sync core extracted from
    # dp-kernel::resilience so it can be exhaustively race-checked with loom
    # (loom can't build inside dp-kernel: tokio's transitive deps break under
    # --cfg loom). dp-kernel re-exports CircuitBreaker from here; public path
    # dp_kernel::resilience::CircuitBreaker is unchanged.
    "crates/breaker-core",
    "crates/dp-kernel",
    # Cycle 13 — L3.B per-aggregate projection skeletons (consume
    # `crates/dp-kernel::Projection` trait shipped cycle 12; write to the
    # `contracts/migrations/per_reality/0006_projections.sql` tables shipped
    # this cycle). Full event coverage lands with L4-L7 domain cycles.
    "crates/projections/pc",
    "crates/projections/npc",
    "crates/projections/region",
    "crates/projections/world_kv",
    "crates/projections/session",
    # Cycle 23 — L5.D.3 canon projection (11th projection table; consumes the
    # cycle-13 cycle-12 `Projection` trait + writes to the cycle-23 L5.D.1
    # `canon_projection` table in per-reality DB). Glossary-service authoring
    # is OUT of foundation scope per Q-L5A-1; this crate handles the
    # per-reality projection write path from canon.* events fanned out via
    # the xreality protocol (cycle 10) + meta-worker canon writer (cycle 24+).
    "crates/projections/canon",
    # S2/C2 (2026-06-04) — from-spec golden fixtures: {event -> expected
    # projection delta} per event type, asserted against the full projection
    # set's apply_one. The value-correctness oracle (regression-lock framing).
    "crates/projection-golden",
    # W4.6 (2026-06-15) — D-C2-REFERENCE-PROJECTOR: the independent oracle the
    # golden battery is NOT. A DDL+contract CONFORMANCE oracle (validates every
    # production update against the schema: table/column/pk/kind/direct-field)
    # for all 20 events, plus a from-design REPRODUCTION reference for the
    # relationship + canon arms. Derived from the event contract + table DDL,
    # never from crates/projections/* — so it can DISAGREE on a real bug.
    "crates/projection-reference",
    # Cycle 27 — L5.I.3 full canon-guardrail implementation. Backwards-compat
    # with cycle-25 `dp-kernel::canon_cache::CanonGuardrail` trait (Q-L5-5
    # LOCKED). Production roleplay-service / world-service binds
    # `contracts_prompt::YamlGuardrail` in place of cycle-25 `NoOpGuardrail`
    # placeholder. Rules data-driven via YAML manifest
    # (`contracts/canon/guardrail_rules.yaml`).
    "crates/contracts-prompt",
    # Cycle 28 — L6.A.5 WS server-lib + envelope/close-code types for
    # downstream Rust services (roleplay-service, world-service). Per
    # Q-L6-1 the gateway WS impl lives in NestJS api-gateway-bff; this
    # crate is server-LIB types only (no Rust WS server).
    "crates/contracts-ws",
    # ACP A3 (2026-07-16) — typed Rust mirror of the Agent Control Plane contracts
    # (working-memory/charter). roleplay-service produces its seed via these structs
    # instead of hand-rolled JSON; a schema-conformance test proves both-sides agreement.
    "crates/contracts-agent-control",
    # Cycle 14 — L3.D per-aggregate parallel rebuilder. Consumes
    # `dp-kernel::Projection` + `ProjectionRunner` (cycle 12) to replay events
    # from the L2.A event log into the cycle-13 projection tables. Used by
    # the cycle-14 L3.G freeze-rebuild script and the cycle-14 L3.H
    # catastrophic admin-cli command (Q-L3-3 admin-cli + rolling_rebuild).
    "crates/rebuilder",
    # Cycle 17 — L4.B proc-macros for `dp-kernel`. Ships `#[derive(Aggregate)]`
    # + `#[handles_event("...")]` attribute (Q-L4B-1). Separate crate because
    # proc-macro = true crates cannot ship runtime types in the same crate.
    "crates/dp-kernel-macros",
    # Cycle 25 — L5.F.4 Rust HTTP/JSON client for glossary-service canon
    # RPCs (cycle 25 L5.F). Q-L5-4 LOCKED: HTTP/JSON V1. Mirror of the Go
    # client at `clients/go/glossary_client/`. Used by Rust services
    # (world-service Rust shards, future roleplay-service Rust shards) to
    # call glossary-service canon RPCs (read + write + seed-export).
    "clients/rust/glossary_client",
    # S9 (2026-06-12) — Stateright model checking of foundation protocols
    # (I9 lifecycle CAS, I13 outbox, I7 cross-reality fan-out).
    "crates/foundation-model",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["LoreWeave"]
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }

# HTTP client (rustls-tls avoids OpenSSL build pain on Windows)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# HTTP server (tilemap-service `serve` subcommand — POST /internal/v1/tilemaps/render)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.7", features = ["timeout", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# TMP-A4 deterministic seed
blake3 = "1.5"

# Deterministic procedural RNG — ChaCha8 streams sub-seeded from the blake3
# TilemapSeed (TMP_002 §8). rand provides the SeedableRng/Rng traits.
rand = "0.10"
rand_chacha = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUIDs (gateway StreamRequest.model_ref + user_id query param).
# v5 enables deterministic UUIDs (namespace + name → UUID) — used by the
# cycle-26 L5.G reality_seeder to derive synthetic seed event_ids from
# (reality_id, canon_entry_id) so retries don't multiply audit entries.
uuid = { version = "1.10", features = ["serde", "v4", "v5"] }

# Structured logging
tracing = "0.1"
# "json" added 2026-06-24 for crates/service-http::init_tracing (platform JSON
# logs w/ service + trace_id). Additive — tilemap/world `fmt()` unaffected.
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# User-facing JWT auth (crates/service-http::require_user; roleplay-service is
# the first consumer). HS256, `sub` claim → user_id — mirrors book-service.
jsonwebtoken = "9"
# Typed TIMESTAMPTZ <-> DateTime<Utc> in sqlx models (roleplay-service).
chrono = { version = "0.4", features = ["serde"] }

# HTTP mock server for offline SSE-parser / gateway integration tests (dev-only)
wiremock = "0.6"

# Cycle 17 (L4.A) — Postgres async client for the dp-kernel EventStore wrapper.
# Per Q-L4A-1 we WRAP the `PgPool` behind a `PgEventStore { pool: Arc<PgPool> }`
# struct (not exposed via `pub`) so future backend swaps (Redis Streams, NATS
# JetStream) only touch the EventStore trait impl boundary, never callers.
# `runtime-tokio-rustls` matches the project's preference for rustls-tls (cycle
# 0 reqwest decision) and avoids OpenSSL on Windows dev.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "macros",
    # 2026-06-24 (roleplay-service / crates/service-http::db::init):
    #   "migrate" — sqlx::migrate!() + Migrator for startup migrations.
    #   "chrono"  — TIMESTAMPTZ <-> chrono::DateTime<Utc> in models.
    "migrate",
    "chrono",
] }

# Cycle 16 / DEFERRED-059 — embedding-queue live wiring (world-service).
# async-trait: async IO traits (provider/writer/audit) — same pattern dp-kernel
#   uses for the EventStore trait.
# pgvector: sqlx Encode/Decode for the `vector` type (npc_session_memory_embedding
#   .embedding VECTOR(1536)). The `sqlx` feature targets sqlx 0.8.
# prometheus: Rust ops-surface metrics (first Rust worker with a /metrics
#   endpoint; mirrors the Go workers' prometheus/client_golang surface).
async-trait = "0.1"
pgvector = { version = "0.4", default-features = false, features = ["sqlx"] }
prometheus = "0.13"

# Cycle 17 (L4.B) — proc-macro toolkit for `#[derive(Aggregate)]`.
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# trybuild is used by L4.B macros' tests to assert compile-error messages stay
# friendly. Dev-only — pinned in the macros crate's [dev-dependencies] only.
trybuild = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
