[package]
name = "contracts-prompt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "L5.I.3 — canon_guardrail full implementation (RAID cycle 27). Backwards-compatible with cycle-25 `dp-kernel::canon_cache::CanonGuardrail` trait. Roleplay-service pre-prompt-assembly check that rejects L3 writes conflicting with L1 axiomatic canon (Q-L5-5 LOCKED)."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../dp-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
uuid = { workspace = true }
