[package]
name = "contracts-ws"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "L6.A.5 — WS server lib for downstream services (roleplay-service, world-service). RAID cycle 28. Per Q-L6-1 the gateway WS impl lives in NestJS (api-gateway-bff); this Rust crate provides envelope + close-code + server-lib primitives downstream services use over RPC from the gateway."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
