[package]
name = "dp-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Data-platform kernel — L2/L3/L4 event sourcing primitives (Event/Aggregate/Snapshot/Projection traits + Postgres-backed EventStore). Shipped in RAID cycles 8 (L2.H/I), 10 (L2.C outbox), 12 (L3.B/C projection + load_aggregate), 17 (L4.A Event/EventStore + Snapshot trait + Postgres backend)."

[lib]
path = "src/lib.rs"

[features]
# Cycle 32 (L7.E) — compile-time prod-build flag. With `prod` enabled:
#   - `logging::Level::Debug` is dropped at the Logger boundary
#   - `logging::FieldKind::Sensitive` is dropped at all levels
#   - `logging::JsonLogger::new_prod` refuses `NoopRedactor`
# Default builds (no feature) keep dev visibility for ergonomic local work.
default = []
prod = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Cycle 17 (L4.A) — async EventStore trait. `async_trait` lets us write
# `async fn append(...)` inside a trait while staying compatible with stable
# Rust 1.85 (edition 2024). Native async-in-trait works on stable but the
# `dyn EventStore` upcasts we need for the shared test suite require the
# macro shim.
async-trait = "0.1"

# Cycle 17 (L4.A) — Tokio is the async runtime contract for the EventStore.
# Pulled in via the workspace dep (rt-multi-thread + macros + signal).
tokio = { workspace = true }

# Cycle 17 (L4.A) — Structured logging. Useful for the integration tests but
# also a contract: every `append` / `read_stream` call emits a span. Pulled
# via workspace dep so the version matches the rest of the repo.
tracing = { workspace = true }

# Cycle 17 (L4.A) — Postgres backend. WRAPPED behind `PgEventStore` (Q-L4A-1)
# so the `sqlx::PgPool` is never exposed in our public API.
sqlx = { workspace = true }

# Cycle 21 (L4.D) — SHA-256 of the rendered prompt for `prompt::PromptBundle::context_hash`.
# The rendered body itself never leaves the Composer call stack (S09 §12Y
# body-never-stored invariant); the hash is what crosses into the audit row
# and the bundle. RustCrypto's sha2 = no openssl dep, no Windows pain.
sha2 = "0.11"

# S6 / H1-loom — the CircuitBreaker sync core now lives in a tokio-free leaf
# crate (so loom can build it). resilience.rs re-exports CircuitBreaker etc.
# from here; the async with_timeout/retry/Bulkhead primitives stay local.
breaker-core = { path = "../breaker-core" }

# W2.5 / D-S6-BULKHEAD-SHUTTLE — `shuttle` is a custom cfg (RUSTFLAGS="--cfg
# shuttle"), not a Cargo feature — declare it so the unexpected_cfgs lint stays
# quiet on normal builds.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(shuttle)'] }

[dev-dependencies]
# Test runtime for the EventStore integration test suite. Multi-thread flavor
# matches the production runtime.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }

# W2.5 — only pulled under `RUSTFLAGS="--cfg shuttle"`. shuttle is a runtime
# concurrency model-checker that reaches the async interleavings loom can't. It
# does NOT rebuild tokio (unlike loom), so plain `--cfg shuttle` builds dp-kernel
# cleanly; the gated test uses shuttle::sync only (it model-checks the bulkhead
# ADMISSION algorithm — the production Bulkhead delegates the slot gate to
# tokio::Semaphore, which shuttle can't intercept; see D-W2-BULKHEAD-SHUTTLE-LITERAL).
# Run: `RUSTFLAGS="--cfg shuttle" cargo test -p dp-kernel bulkhead_shuttle`.
[target.'cfg(shuttle)'.dev-dependencies]
shuttle = "0.9"
