[package]
name = "projection-golden"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "S2/C2 — from-spec golden fixtures: {event -> expected projection delta} per event type. Authored from the design source (migration semantics + locked Q-decisions), not apply_event output."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../dp-kernel" }
projections-pc = { path = "../projections/pc" }
projections-npc = { path = "../projections/npc" }
projections-region = { path = "../projections/region" }
projections-world-kv = { path = "../projections/world_kv" }
projections-session = { path = "../projections/session" }
projections-canon = { path = "../projections/canon" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
