[package]
name = "projection-reference"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "W4.6 / D-C2-REFERENCE-PROJECTOR — the independent projection oracle. A DDL+contract conformance oracle (table/column/pk/kind/direct-field) over every production projection update, plus a from-design reproduction reference for the relationship + canon arms. Derived from the event contract + table DDL, NEVER from crates/projections/*."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../dp-kernel" }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# Tests run the production projections + the golden fixtures through BOTH the
# conformance oracle and the reproduction reference (the differential harness).
projection-golden = { path = "../projection-golden" }
projections-pc = { path = "../projections/pc" }
projections-npc = { path = "../projections/npc" }
projections-region = { path = "../projections/region" }
projections-world-kv = { path = "../projections/world_kv" }
projections-session = { path = "../projections/session" }
projections-canon = { path = "../projections/canon" }
serde_json = { workspace = true }
