[package]
name = "rebuilder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "L3.D — per-aggregate parallel rebuilder (RAID cycle 14)."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../dp-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
