# world-gen — standalone procedural world-map generator (GEO_GENERATOR_PLAN).
# Library `world_gen` + thin CLI bin `world-gen`. No event-sourcing engine
# coupling — a pure `generate(seed, &CreativeSeed) -> WorldMap` function.

[package]
name = "world-gen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "world_gen"
path = "src/lib.rs"

[[bin]]
name = "world-gen"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rand_core = "0.6"
rand_chacha = "0.3"
# 2D Delaunay (O(N log N)) — the mesh builds the spherical Delaunay via a
# stereographic projection + this triangulator (Phase 2 quality pass; replaced
# the O(N²) hand-rolled 3D Quickhull).
delaunator = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
# v3.1b — Boolean polygon ops (union/difference/intersection) for the Boolean
# ShapeGenerator (`shape/csg.rs`). Wraps the Clipper library (Angus Johnson)
# via i64 fixed-point internally; the `safe_boolean` wrapper handles
# f32↔fixed conversion + degenerate/empty result fallback.
geo-clipper = "0.9"
# Re-exported by geo-clipper but we use `geo_types::Coord`/`LineString`/`Polygon`
# directly in `shape/csg.rs` — declare a direct dep so the import resolves.
geo-types = "0.7"
# blocking HTTP for the optional LLM CreativeSeed authoring (Phase 4).
reqwest = { workspace = true, features = ["blocking"] }
# v4.3e: optional Postgres-backed DispatchCache. Uses tokio runtime
# internally via block_on so the sync DispatchCache trait stays sync.
# Only constructed when a caller opts in via `PostgresDispatchCache::connect`;
# CLI / examples don't add `--cache postgres` until the world-gen crate
# ships into a platform service with a real Postgres available.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "json", "macros"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# Statistical benchmark harness — `cargo bench` (see benches/generate.rs).
criterion = "0.5"

[[bench]]
name = "generate"
harness = false
