# world-gen — standalone procedural world-map generator (GEO_GENERATOR_PLAN).
# Library `world_gen` + thin CLI bin `world-gen`. No event-sourcing engine
# coupling — a pure `generate(seed, &CreativeSeed) -> WorldMap` function.

[package]
name = "world-gen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
name = "world_gen"
path = "src/lib.rs"

[[bin]]
name = "world-gen"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rand_core = "0.10"
rand_chacha = "0.9"
# 2D Delaunay (O(N log N)) — the mesh builds the spherical Delaunay via a
# stereographic projection + this triangulator (Phase 2 quality pass; replaced
# the O(N²) hand-rolled 3D Quickhull).
delaunator = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
# v3.1b — Boolean polygon ops (union/difference/intersection) for the Boolean
# ShapeGenerator (`shape/csg.rs`). Wraps the Clipper library (Angus Johnson)
# via i64 fixed-point internally; the `safe_boolean` wrapper handles
# f32↔fixed conversion + degenerate/empty result fallback.
geo-clipper = "0.9"
# Re-exported by geo-clipper but we use `geo_types::Coord`/`LineString`/`Polygon`
# directly in `shape/csg.rs` — declare a direct dep so the import resolves.
geo-types = "0.7"
# **Provider gateway invariant (CLAUDE.md)**: world-gen MUST go through the
# loreweave_llm SDK for ALL LLM calls — direct provider HTTP from
# shape/{anthropic,openai,ollama}.rs was removed 2026-05-30 as the violation
# that landed via PR #5 (Phase 4 author.rs llm_json_request) + PR #8 (v4.3
# dispatch direct providers). The SDK routes through provider-registry-service
# which resolves `model_ref: Uuid` → provider config server-side.
loreweave_llm = { path = "../../sdks/rust/loreweave_llm" }
# Required by loreweave_llm's `ChatStreamRequest.model_ref` + user_id.
uuid = { workspace = true }
# v4.3e: optional Postgres-backed DispatchCache. Uses tokio runtime
# internally via block_on so the sync DispatchCache trait stays sync.
# Only constructed when a caller opts in via `PostgresDispatchCache::connect`;
# CLI / examples don't add `--cache postgres` until the world-gen crate
# ships into a platform service with a real Postgres available.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "json", "macros"] }
# Async runtime — needed by loreweave_llm SDK (streaming) AND by the existing
# PostgresDispatchCache sync-async bridge. shape/llm.rs's GatewayLlmProvider /
# GatewayTextProvider use `Handle::block_on` so the sync LlmProvider /
# TextProvider trait surfaces are preserved.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
# Statistical benchmark harness — `cargo bench` (see benches/generate.rs).
criterion = "0.8"
# Mock gateway for naming.rs / author.rs tests — same as loreweave_llm's
# own test harness in sdks/rust/loreweave_llm/tests/gateway_mock.rs.
wiremock = { workspace = true }

[[bench]]
name = "generate"
harness = false
